@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2020-01-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pict.c (ReadPICTImage): Be more strict about PICT
+rectangle by treating rectangle dimensions as if they are a 16-bit
+signed type and not allowing negative values.  Avoid GCC warnings
+which sprung up similar to &quot;warning: comparison is always false
+due to limited range of data type&quot;.</li>
+</ul>
+</blockquote>
 <p>2020-01-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
